crates/clinker-core/tests/snapshots/path_a_parity__canonical_dag_aggregate_windowed.snap
---
source: crates/clinker-core/tests/path_a_parity.rs
expression: shape
---
[source] sales
[transform] active_only <- sales
[aggregation] by_dept <- active_only
[output] dept_totals <- by_dept
