crates/clinker-core/tests/snapshots/path_a_parity__canonical_dag_combine_two_input_equi.snap
---
source: crates/clinker-core/tests/path_a_parity.rs
expression: shape
---
[source] products
[source] orders
[combine] enriched <- orders, products
[output] enriched_out <- enriched
