crates/clinker-core/tests/snapshots/path_a_parity__canonical_dag_csv_transform_sink.snap
---
source: crates/clinker-core/tests/path_a_parity.rs
expression: shape
---
[source] employees
[transform] tier_flag <- employees
[output] results <- tier_flag
